--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & npx next-video sync -w",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync": "npx next-video sync -w"
   },
   "dependencies": {
     "@studio-freight/hamo": "^0.6.33",
     "@studio-freight/lenis": "^1.0.42",
+    "framer-motion": "^11.5.4",
+    "lucide-react": "^0.441.0",
     "next": "15.0.0-rc.0",
     "next-video": "^1.1.4",
     "react": "19.0.0-rc-f2df5694-20240916",
