--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev ",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "sync": "npx next-video sync -w"
+    "lint": "next lint"
   },
   "dependencies": {
     "@studio-freight/hamo": "^0.6.33",
@@ -15,7 +14,6 @@
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
     "next": "15.0.0-rc.0",
-    "next-video": "^1.2.0",
     "react": "19.0.0-rc-f2df5694-20240916",
     "react-dom": "19.0.0-rc-f2df5694-20240916"
   },
